[package]
name = "ksyndicate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
chrono = "0.4.26"
